--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,80 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: black;
+}
+
+/* HEADER */
+
+.container {
+  width: 1000px;
+  margin: 10px auto;
+  background-color: black;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.logo img {
+  height: 50px;
+  width: 150px;
+}
+
+/* MENU */
+
+.menu {
+  border: red solid 2px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+.menu span {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* CHARACTERS */
+
+.bloc {
+  display: flex;
+  overflow: hidden;
+  border: green solid 2px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 1000px;
+  height: auto;
+}
+
+.character-card {
+  border: red solid 2px;
+  height: 300px;
+  width: 200px;
+}
+
+.character-card-img img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.character-card h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: white;
+  text-align: center;
+}
+
+.character-card p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  color: white;
+  text-align: center;
+}
+.link {
+  text-decoration: none;
+}
