--- a/src/App.css
+++ b/src/App.css
@@ -29,15 +29,89 @@ body {
 /* MENU */
 
 .menu {
-  border: red solid 2px;
   display: flex;
   justify-content: center;
   justify-content: space-between;
 }
 
 .menu span {
+  padding: 10px;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  opacity: 0.8;
+}
+
+.menu span:hover {
+  cursor: pointer;
+  opacity: 1;
+  border-bottom: solid #ff0000 2px;
+}
+
+/* RECHERCHE */
+
+.Recherche {
+  display: flex;
+  justify-content: center;
+  height: auto;
+}
+
+.Recherche-two {
+  width: 500px;
+  height: 30px;
+  background-color: #f5f6f7;
+  border-radius: 8px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.Recherche-two input {
+  width: 450px;
+  border: none;
+  background-color: #f5f6f7;
+  margin-left: 10px;
+}
+
+.icone {
+  color: black;
+  margin-left: 10px;
+}
+
+.page {
+  padding: 10px;
+  background: none;
+  background-color: #ff0000;
+  border: none;
+  -webkit-clip-path: polygon(
+    10px 0%,
+    calc(100% - 10px) 0%,
+    100% 10px,
+    100% calc(100% - 10px),
+    calc(100% - 10px) 100%,
+    10px 100%,
+    0% calc(100% - 10px),
+    0% 10px
+  );
+  clip-path: polygon(
+    20% 0%,
+    80% 0%,
+    100% 0,
+    100% 79%,
+    80% 100%,
+    0 100%,
+    0% 80%,
+    0 23%
+  );
+  color: white;
+  font-family: "Roboto", sans-serif;
+  opacity: 0.8;
+}
+
+.page:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 /* CHARACTERS */
@@ -45,38 +119,81 @@ body {
 .bloc {
   display: flex;
   overflow: hidden;
-  border: green solid 2px;
+  border: black solid 2px;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 1000px;
   height: auto;
+  width: 100%;
 }
 
 .character-card {
   border: red solid 2px;
   height: 300px;
   width: 200px;
+  margin-bottom: 10px;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0s ease-in-out;
+  transition: 0.6s ease-in-out;
+  -webkit-clip-path: polygon(
+    10px 0%,
+    calc(100% - 10px) 0%,
+    100% 10px,
+    100% calc(100% - 10px),
+    calc(100% - 10px) 100%,
+    10px 100%,
+    0% calc(100% - 10px),
+    0% 10px
+  );
+  clip-path: polygon(
+    20% 0%,
+    80% 0%,
+    100% 0,
+    100% 93%,
+    89% 100%,
+    20% 100%,
+    0 100%,
+    0 0
+  );
+
+  background-color: #ff0000;
 }
 
 .character-card-img img {
   height: 200px;
   width: 100%;
   object-fit: cover;
+  opacity: 0.9;
+}
+
+.character-card-img img:hover {
+  opacity: 1;
+}
+
+.character-card:hover {
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 .character-card h3 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   color: white;
   text-align: center;
 }
 
 .character-card p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-family: "Roboto", sans-serif;
+  font-size: 8px;
   color: white;
   text-align: center;
 }
 .link {
   text-decoration: none;
+}
+
+/* CARD CHARACTERS */
+
+.titre {
+  color: white;
 }
