--- a/src/App.css
+++ b/src/App.css
@@ -65,15 +65,6 @@ body {
   color: white;
   font-family: "Roboto Condensed", sans-serif;
   opacity: 0.8;
-  /* text-transform: uppercase;
-  text-rendering: optimizeLegibility;
-  letter-spacing: 0.1em;
-  text-shadow: 0 -1px 0 #fff, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a,
-    0 4px 0 #282828, 0 5px 0 #262626, 0 6px 0 #242424, 0 7px 0 #222,
-    0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c, 0 10px 0 #1a1a1a,
-    0 10px 0 #181818, 0 10px 0 #161616, 0 14px 0 #141414, 0 10px 0 #121212,
-    0 22px 30px rgba(0, 0, 0, 0.9);
- */
 }
 
 .menu span:hover {
@@ -149,10 +140,6 @@ body {
   cursor: pointer;
   opacity: 1;
 }
-
-/* .pagination {
-  color: white;
-} */
 
 /* CHARACTERS ET COMICS PAGE ROSTER */
 
@@ -266,6 +253,95 @@ body {
     0 22px 30px rgba(0, 0, 0, 0.9);
 }
 
+.comics-card p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Roboto", sans-serif;
+  font-size: 8px;
+  color: white;
+  text-align: justify;
+  padding: 10px;
+}
+
+.character-card {
+  height: 300px;
+  width: 200px;
+  margin-bottom: 40px;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0s ease-in-out;
+  transition: 0.6s ease-in-out;
+  -webkit-clip-path: polygon(
+    10px 0%,
+    calc(100% - 10px) 0%,
+    100% 10px,
+    100% calc(100% - 10px),
+    calc(100% - 10px) 100%,
+    10px 100%,
+    0% calc(100% - 10px),
+    0% 10px
+  );
+  clip-path: polygon(
+    20% 0%,
+    80% 0%,
+    100% 0,
+    100% 93%,
+    89% 100%,
+    20% 100%,
+    0 100%,
+    0 0
+  );
+
+  background-color: #ff0000;
+}
+
+.character-card-img img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+}
+
+.character-card:hover {
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  /* background-color: white; */
+  background-color: black;
+  cursor: default;
+  /* transition-timing-function: ease-in; */
+  /* background: red;
+  -webkit-transition: 0.9s ease-in-out;
+  transition: 0.9s ease-in-out;
+  background-image: linear-gradient(90deg, red, white); */
+}
+
+.character-card h3 {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: white;
+  text-align: center;
+}
+
+.character-card h3:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.character-card h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: white;
+  text-align: center;
+}
+
+.character-card p {
+  font-family: "Roboto", sans-serif;
+  font-size: 8px;
+  color: white;
+  text-align: justify;
+  padding: 10px;
+}
+
 /* CARD CHARACTERS */
 
 .bloc-deux {
@@ -280,12 +356,20 @@ body {
   text-align: center;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
+
 .titre {
-  border: red solid 1px;
   height: 400px;
   width: 300px;
   color: white;
   text-align: center;
+  font-family: Roboto;
+}
+
+.character-name p {
+  margin-bottom: 20px;
 }
 
 .characters-image img {
@@ -299,7 +383,6 @@ body {
 .characters-image img:hover {
   -webkit-transform: scale(0.9);
   transform: scale(0.9);
-  /* background-color: white; */
 }
 
 .comics-image img {
@@ -311,4 +394,52 @@ body {
 
 .character-comics {
   display: flex;
+  overflow: hidden;
+  border: black solid 2px;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+}
+
+.feat-comics {
+  font-family: Roboto;
+}
+.comics-card {
+  margin-bottom: 20px;
+}
+
+.description {
+  font-size: 10px;
+}
+
+/* SIGNUP */
+
+/* signup */
+
+.signup-container {
+  display: flex;
+  flex-direction: column;
+  width: 50vh;
+  height: 70vh;
+  justify-content: space-between;
+  margin: 0 auto;
+  text-align: center;
+  align-items: center;
+}
+
+.signup-container h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+  margin-top: 20px;
+}
+
+.signup-container input {
+  border: none;
+  border-bottom: grey solid 1px;
+  background-color: white;
+}
+
+.sign:hover {
+  cursor: pointer;
 }
